你的提交说明

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: xiuxian
-description: "修仙放置游戏 - 开发者: hanson"
+description: "修仙放置游戏 - 开发者: Hanson"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
